# Watch_price

./: LICENSE  README.md
watch-price-cnn/: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.ps1
watch-price-cnn/configs/: base.yaml
watch-price-cnn/docker/: Dockerfile  docker-compose.yaml
watch-price-cnn/notebooks/: 01_eda.ipynb  02_training.ipynb  03_explainability.ipynb
watch-price-cnn/scripts/: evaluate.py  train.py
watch-price-cnn/src/: __init__.py
watch-price-cnn/src/data/: __init__.py
watch-price-cnn/src/evaluation/: __init__.py
watch-price-cnn/src/explainability/: __init__.py
watch-price-cnn/src/models/: __init__.py
watch-price-cnn/src/training/: __init__.py
watch-price-cnn/src/utils/: __init__.py  visualization.py
watch-price-cnn/tests/: test_dataset.py  test_model.py
